fix: refactor battle event handling and introduce BossUtil for boss-related checks